--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="panel-body">
               <p>属于计算机技术与软件专业技术资格（水平）考试（即软考）高级资格考试里面的一项，对应于高级项目经理，通过本考试的合格人员具有高级工程师的实际工作能力和业务水平，可聘任高级工程师职务。
-              <a href="./advPM/" class="btn  btn-sm btn-success" role="button">访问资料库 &raquo;</a>
+              <a href="./advPM/" class="btn  btn-sm btn-info" role="button">访问资料库 &raquo;</a>
               </p>
               
             </div>
@@ -86,7 +86,7 @@
             </div>
             <div class="panel-body">
               <p>属于计算机技术与软件专业技术资格（水平）考试（即软考）中级资格考试里面的一项，对应于中级项目经理，主要在信息系统建设和集成工作中担任相关的项目管理工作，可聘任中级工程师职务。
-               <a href="./PM/" class="btn  btn-sm btn-success" role="button">访问资料库 &raquo;</a>
+               <a href="./PM/" class="btn  btn-sm btn-info" role="button">访问资料库 &raquo;</a>
               </p>
             </div>
           </div>
@@ -124,8 +124,8 @@
         <h3 id="nav_about">关于软考帮</h3>
       </div>
       <div class="well">
-      		<p>一直想汇集一帮人学习软考知识、研究软考攻略，因为在繁忙的工作中坚持学习听不容易，以考促学是一种手段，互相鼓励也是一种手段，于是搞了这个软考帮。希望通过历届的考试真题和考友的相互扶持营造出一个学习交流软件开发和管理知识的小圈子。</p>
-            <p>项目经理交流QQ群号为<span class="label label-info">96165359 </span><a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=e3a4a0eccd711b8733642e5887684141453fbba8065029b3f93956049cab8460"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="软考帮-项目经理" title="软考帮-项目经理"></a>，架构师交流QQ群号为<span class="label label-info">96880287</span><a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=770d1bfc9ab0a87e8d4c4081fe37414e7b31488ba158d26b4ef6b834d8346969"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="软考帮-架构师" title="软考帮-架构师"></a>，若你有分享资料的想法，可以在QQ群里直接分享，也可以发邮件至rkbang@126.com。</p>
+      		<p>一直想汇集一帮人学习软考知识、研究软考攻略，因为在繁忙的工作中坚持学习挺不容易，以考促学是一种手段，互相鼓励也是一种手段，于是搞了这个软考帮。希望通过历届的考试真题和考友的相互扶持营造出一个学习交流软件开发和管理知识的小圈子。</p>
+            <p>项目经理（信息系统项目管理师 &amp; 系统集成项目管理工程师）交流QQ群号<span class="label label-info">97981703</span><a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=51e578fbbb387fb3d3507c67afa8aa8c8a37bf437c8641dae338bc364bc6013a"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="软考帮-项目经理" title="软考帮-项目经理"></a>，架构师交流QQ群号<span class="label label-info">96880287</span><a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=770d1bfc9ab0a87e8d4c4081fe37414e7b31488ba158d26b4ef6b834d8346969"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="软考帮-架构师" title="软考帮-架构师"></a>，系统分析师交流QQ群号<span class="label label-info">96165359 </span><a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=e3a4a0eccd711b8733642e5887684141453fbba8065029b3f93956049cab8460"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="软考帮-系统分析师" title="软考帮-系统分析师"></a>，若你有分享资料的想法，可以在QQ群里直接分享，也可以发邮件至rkbang@126.com。</p>
       </div>
        <div class="page-header">
         <h3 id="nav_ruankao">关于软考</h3>
@@ -149,7 +149,7 @@
     <!-- /container -->
     <div class="footer">
       <div class="container">
-        <p class="text-muted">  &copy; 2014 www.rkbang.com, all rights reserved.</p>
+        <p class="text-muted">  &copy; 2014 www.rkbang.com all rights reserved.</p>
       </div>
     </div>
     <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
