--- a/advPM/datum/readme.html
+++ b/advPM/datum/readme.html
@@ -37,7 +37,7 @@
 
 
         
-    <div class="book"  data-level="3" data-basepath="undefined" data-revision="1410241624152">
+    <div class="book"  data-level="3" data-basepath="undefined" data-revision="1410242142549">
     
 
 <div class="book-summary">
@@ -308,7 +308,7 @@
 
 <script>
 require(["gitbook"], function(gitbook) {
-    var config = {"fontSettings":{"theme":"sepia","family":"serif","size":"1"}};
+    var config = {"fontSettings":{"theme":"sepia","family":"serif","size":"1"},"basePath":""};
     gitbook.start(config);
 });
 </script>
