--- a/advPM/index.html
+++ b/advPM/index.html
@@ -35,7 +35,7 @@
 
 
         
-    <div class="book"  data-level="0" data-basepath="undefined" data-revision="1410241624152">
+    <div class="book"  data-level="0" data-basepath="undefined" data-revision="1410242142549">
     
 
 <div class="book-summary">
@@ -316,7 +316,7 @@
 
 <script>
 require(["gitbook"], function(gitbook) {
-    var config = {"fontSettings":{"theme":"sepia","family":"serif","size":"1"}};
+    var config = {"fontSettings":{"theme":"sepia","family":"serif","size":"1"},"basePath":""};
     gitbook.start(config);
 });
 </script>
