--- a/advPM/datum/readme.html
+++ b/advPM/datum/readme.html
@@ -37,7 +37,7 @@
 
 
         
-    <div class="book"  data-level="3" data-basepath="undefined" data-revision="1410247964684">
+    <div class="book"  data-level="3" data-basepath=".." data-revision="1410263599110">
     
 
 <div class="book-summary">
