--- a/advPM/GLOSSARY.html
+++ b/advPM/GLOSSARY.html
@@ -38,7 +38,7 @@
 
 
         
-    <div class="book"  data-level="" data-basepath="undefined" data-revision="1410247964684">
+    <div class="book"  data-level="" data-basepath="." data-revision="1410263599110">
     
 
 <div class="book-summary">
