--- a/advPM/index.html
+++ b/advPM/index.html
@@ -35,7 +35,7 @@
 
 
         
-    <div class="book"  data-level="0" data-basepath="undefined" data-revision="1410247964684">
+    <div class="book"  data-level="0" data-basepath="." data-revision="1410263599110">
     
 
 <div class="book-summary">
