添加百度统计

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
       <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script type="text/javascript">
+        var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+        document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8099410928a300e62210677cc7066ade' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+
   </head>
   <body>
     
