--- a/advPM/201405/paper1.html
+++ b/advPM/201405/paper1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html lang="zh-CN" >
     
     <head>
@@ -214,7 +214,7 @@
     <div id="font-settings-wrapper" class="dropdown pull-left">
         <a href="#" class="btn toggle-dropdown" aria-label="Toggle font settings"><i class="fa fa-font"></i>
         </a>
-        ﻿<div class="dropdown-menu font-settings">
+        ?<div class="dropdown-menu font-settings">
     <div class="dropdown-caret">
         <span class="caret-outer"></span>
         <span class="caret-inner"></span>
@@ -3341,7 +3341,7 @@
                     <section class="normal" id="section-undefined">
                         <blockquote>
 <p>网友markcxz于2014年9月整理，最后更新于2014年9月10日。</p>
-<p>若有意见或建议，请在QQ群众讨论，或发邮件至<a href="&#109;&#97;&#x69;&#108;&#116;&#x6f;&#x3a;&#x72;&#107;&#x62;&#x61;&#x6e;&#x67;&#64;&#x31;&#x32;&#54;&#46;&#x63;&#x6f;&#109;">&#x72;&#107;&#x62;&#x61;&#x6e;&#x67;&#64;&#x31;&#x32;&#54;&#46;&#x63;&#x6f;&#109;</a>。</p>
+<p>若有意见或建议，请在QQ群中(97981703)讨论，或发邮件至<a href="&#109;&#97;&#x69;&#108;&#116;&#x6f;&#x3a;&#x72;&#107;&#x62;&#x61;&#x6e;&#x67;&#64;&#x31;&#x32;&#54;&#46;&#x63;&#x6f;&#109;">&#x72;&#107;&#x62;&#x61;&#x6e;&#x67;&#64;&#x31;&#x32;&#54;&#46;&#x63;&#x6f;&#109;</a>。</p>
 </blockquote>
 
                     
