--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link href="theme.css" rel="stylesheet">
+	  <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link href="assets/theme.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -46,16 +46,26 @@
             <li><a href="#nav_ruankao">关于软考</a></li>
           </ul>
           
-          	<div class="bdsharebuttonbox nav navbar-nav navbar-right">
-                <a href="#" class="bds_more" data-cmd="more"></a>
-                <a href="#" class="bds_linkedin" data-cmd="linkedin" title="分享到linkedin"></a>
-                <a href="#" class="bds_mshare" data-cmd="mshare" title="分享到一键分享"></a>
-                <a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a>
-                <a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
-                <a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a>
-                <a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a>
-                <a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>
-        	</div>
+          <ul class="nav navbar-nav navbar-right sharebar">
+            <li>
+              <a href="#" data-sharing="cnWeixin" class="cnWeixin"  data-toggle="dropdown" title="分享到微信"></a>
+
+              <div class="dropdown-menu panel panel-info">
+                  <div class="panel-body">
+                    <img alt="二维码" src="assets/qrcode.png" />
+                  </div>
+                  <div class="panel-footer">扫码也能打开本站哦(⊙o⊙)。</div>
+              </div>
+              <a href="#" data-sharing="cnRenren" class="cnRenren" title="分享到人人网"></a>
+              <a href="#" data-sharing="cnDouban" class="cnDouban" title="分享到豆瓣网"></a>
+              <a href="#" data-sharing="cnQzone" class="cnQzone" title="分享到QQ空间"></a>
+              <a href="#" data-sharing="cnTqq" class="cnTqq" title="分享到腾讯微博"></a>
+              <a href="#" data-sharing="cnTsina" class="cnTsina" title="分享到新浪微博"></a>
+            </li>
+          </ul>
+
+
+
         </div><!--/.nav-collapse -->
       </div>
     </div>
@@ -159,7 +169,6 @@
     </div>
     <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"16"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
-    </script>
+    <script src="assets/app.js"></script>
   </body>
 </html>
