--- a/advPM/201311/paper3.html
+++ b/advPM/201311/paper3.html
@@ -35,7 +35,7 @@
 
 
         
-    <div class="book"  data-level="1.6" data-basepath=".." data-revision="1410601048112">
+    <div class="book"  data-level="1.6" data-basepath=".." data-revision="1410613018632">
     <div class="book-header">
     <!-- Actions Left -->
     <a href="#" class="btn pull-left toggle-summary" aria-label="Toggle summary"><i class="fa fa-align-justify"></i></a>
@@ -68,7 +68,7 @@
 </div>
 
     </div>
-    <a href="http://www.rkbang.com" class="btn pull-right" aria-label=""><i class="fa fa-home"> 软考帮首页</i></a>
+    <a href="http://www.rkbang.com" class="btn pull-left" aria-label=""><i class="fa fa-home"> 软考帮首页</i></a>
 
     <!-- Actions Right -->
     
