--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
      <div class="container" role="main">  
       <div class="alert alert-success" role="alert">
         亲，欢迎加入软考帮，我们的口号是『<strong> 轻松学习软考，大家帮助大家</strong>』！
+
       </div>
 
       <div class="row">
@@ -88,10 +89,13 @@
             </div>
             <div class="panel-body">
               <p>属于计算机技术与软件专业技术资格（水平）考试（即软考）高级资格考试里面的一项，对应于高级项目经理，通过本考试的合格人员具有高级工程师的实际工作能力和业务水平，可聘任高级工程师职务。
-              <a href="./advPM/" class="btn  btn-sm btn-info" role="button">
-                <span class="glyphicon glyphicon-hand-right"> </span> 
-                访问真题库 &raquo;
-              </a>
+	              <a href="./advPM/" class="btn  btn-sm btn-info" role="button">
+	                <span class="glyphicon glyphicon-hand-right"> </span> 
+	                访问真题库 &raquo;
+	              </a>
+	              <a href="http://t.cn/RzPQeT2" class="btn  btn-sm btn-success" role="button">
+	                2014年11月上午真题
+	              </a>
               </p>
               
             </div>
@@ -107,6 +111,9 @@
                 <a href="./PM/" class="btn  btn-sm btn-info" role="button">
                   <span class="glyphicon glyphicon-hand-right"> </span> 访问真题库 &raquo;
                 </a>
+	              <a href="http://t.cn/Rz7UJfL" class="btn  btn-sm btn-success" role="button">
+	                2014年11月上午真题
+	              </a>
               </p>
             </div>
           </div>
@@ -170,20 +177,20 @@
             <a target="_blank" href="http://www.mohrss.gov.cn" class="btn btn-sm btn-default" role="button">人力资源和社会保障部</a>                    
             <a target="_blank" href="http://www.miit.gov.cn" class="btn btn-sm btn-default" role="button">工业和信息化部</a>               
             <a target="_blank" href="http://www.informatization.gov.cn/" class="btn btn-sm btn-default" role="button">中国电子协会系统集成分会</a>          
-            <a target="_blank" href="http://www.rkb.gov.cn" class="btn btn-sm btn-default" role="button">中国计算机技术职业资格网(软考办)</a>                    
-              <a href="http://www.rkb.gov.cn/jsj/cms/dfjg/dfjg_2011032801.html" class="btn  btn-sm btn-default" role="button">全国各省市软考网站</a>               
+            <a target="_blank" href="http://www.ruankao.org.cn" class="btn btn-sm btn-default" role="button">中国计算机技术职业资格网(软考办)</a>                    
+            <a target="_blank" href="http://www.ruankao.org.cn/jsj/cms/dfjg/dfjg_2011032801.html" class="btn  btn-sm btn-default" role="button">全国各省市软考网站</a>               
           </div>
 
           <div class="link-row">
               <span class="label label-info link-title">
                  考试说明
               </span>
-              <a target="_blank" href="http://www.rkb.gov.cn/jsj/cms/zyjs/gj/zgjs_xxxtxmgls.html" class="btn  btn-sm btn-default" role="button">信息系统项目管理师考试说明</a>
-              <a target="_blank" href="http://www.rkb.gov.cn/jsj/cms/zyjs/zj/zyjs_xtjcgl.html" class="btn  btn-sm btn-default" role="button">系统集成项目管理工程师考试说明</a>
-              <a target="_blank" href="http://www.rkb.gov.cn/jsj/cms/zyjs/gj/zyjs_jgsjs.html" class="btn  btn-sm btn-default" role="button">系统架构设计师考试说明</a>
-              <a target="_blank" href="http://www.rkb.gov.cn/jsj/cms/zyjs/gj/zgjs_xtfxs.html" class="btn  btn-sm btn-default" role="button">系统分析师考试说明</a>
+              <a target="_blank" href="http://www.ruankao.org.cn/jsj/cms/zyjs/gj/zgjs_xxxtxmgls.html" class="btn  btn-sm btn-default" role="button">信息系统项目管理师考试说明</a>
+              <a target="_blank" href="http://www.ruankao.org.cn/jsj/cms/zyjs/zj/zyjs_xtjcgl.html" class="btn  btn-sm btn-default" role="button">系统集成项目管理工程师考试说明</a>
+              <a target="_blank" href="http://www.ruankao.org.cn/jsj/cms/zyjs/gj/zyjs_jgsjs.html" class="btn  btn-sm btn-default" role="button">系统架构设计师考试说明</a>
+              <a target="_blank" href="http://www.ruankao.org.cn/jsj/cms/zyjs/gj/zgjs_xtfxs.html" class="btn  btn-sm btn-default" role="button">系统分析师考试说明</a>
 
-              <a target="_blank" href="http://bbs.rkb.gov.cn/jsj/cms/kszn/zyjb/" class="btn  btn-sm btn-default" role="button">软考考试指南</a>
+              <a target="_blank" href="http://www.ruankao.org.cn/jsj/cms/kszn/zyjb/" class="btn  btn-sm btn-default" role="button">软考考试指南</a>
           </div>
 
           <div class="link-row">
